Add link to landing page

--- a/apps/index.html
+++ b/apps/index.html
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="mainColumn">
             <div class="information">
-                <img class="icon" src="../assets/images/App Icons/Simple & Classic Games.png" alt="Avatar">
+                <img class="icon" src="../assets/images/App Icons/Simple & Classic Games.png" alt="Simple & Classic Games App Icons">
 
                 <h2>
                     Simple & Classic Games
@@ -55,14 +55,8 @@
                 </div>
 
                 <div class="buttonDrawer">
-                        <!-- <a href="https://itunes.apple.com/us/app-bundle/id1478291357"> -->
-                        <a href="https://itunes.apple.com/us/app-bundle/id1488275434">
-                        <img class="badge"
-                            src="../assets/images/Download on/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg">
-                    </a>
-                    <a href="https://itunes.apple.com/us/app-bundle/id1495557127">
-                        <img class="badge"
-                            src="../assets/images/Download on/Download_on_the_Mac_App_Store_Badge_US-UK_RGB_blk_092917.svg">
+                    <a href="https://apps.apple.com/us/developer/duncan-crawbuck/id1476181426">
+                        <img class="badge" src="../assets/images/Download on/Download_on_the_App_Store_Badge_US-UK_RGB_blk_092917.svg" alt="Download on the App Store">
                     </a>
 
                     <div class="pillButton">
