--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <!-- Cloudflare Web Analytics -->
     <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "b091682bae4d46f288678f5da3f3c4b6"}'></script>
-    <!-- End Cloudflare Web Analytics -->
+
 </head>
 
 <body>
@@ -38,10 +38,10 @@
     <div class="row">
         <div class="mainColumn">
             <div class="information">
-                <img class="avatar" src="./assets/images/avatar.jpeg" alt="Avatar">
+                <img class="avatar" src="./assets/images/avatar.jpeg" alt="Duncan Crawbuck Avatar">
 
                 <h2>
-                    About Me
+                    About
                 </h2>
 
                 <div class="detailText">
@@ -117,7 +117,8 @@
                     <dl>
                         <dt>Bachelor of Science, Computer Science</dt>
                         <dd>California State University, Sacramento</dd>
-                        <dd>Dean's Honor List, 3.5 GPA</dd>
+                        <dd>Dean's Honor List, cum laude</dd>
+                        <dd>3.5 GPA</dd>
                     </dl>
                     <br>
                     <b>Relevant Coursework</b>
@@ -125,7 +126,7 @@
                         <li>Advanced Algorithm Design & Analysis</li>
                         <li>Compiler Construction</li>
                         <li>Database Management Systems</li>
-                        <li>Computing Theory & Programming Languages</li>
+                        <!-- <li>Computing Theory & Programming Languages</li> -->
                         <li>Operating System Principles</li>
                         <li>Computer Networks and Internets</li>
                     </ul>
