Remove app icon assets

--- a/apps/index.html
+++ b/apps/index.html
@@ -35,7 +35,7 @@
     <div class="row">
         <div class="mainColumn">
             <div class="information">
-                <img class="icon" src="../assets/images/App Icons/Simple & Classic Games.png" alt="Simple & Classic Games App Icons">
+                <img class="icon" src="../assets/images/app-icon-collection.png" alt="Simple & Classic Games App Icons">
 
                 <h2>
                     <a href="./simple-and-classic-games/index.html">
