--- a/projects/index.html
+++ b/projects/index.html
@@ -88,7 +88,7 @@
     <div class="row">
         <div class="mainColumn">
             <div class="information">
-                <img class="icon" src="../assets/images/App Icons/iOS & Mac Apps.png" alt="iOS & Mac App Icons">
+                <img class="icon" src="../assets/images/app-icon-collection.png" alt="App Icons">
 
                 <h2>
                     iOS & Mac Apps
