Change apps nav bar link to Simple & Classic landing page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <a href="./projects/index.html">
                     PROJECTS
                 </a>
-                <a href="./apps/index.html">
+                <a href="./apps/simple-and-classic-games/index.html">
                     APPS
                 </a>
             </div>
