--- a/projects/index.html
+++ b/projects/index.html
@@ -25,7 +25,7 @@
                 <a class="active" href="">
                     PROJECTS
                 </a>
-                <a href="../apps/index.html">
+                <a href="../apps/simple-and-classic-games/index.html">
                     APPS
                 </a>
             </div>
