--- a/apps/simple-and-classic-games/index.html
+++ b/apps/simple-and-classic-games/index.html
@@ -14,6 +14,10 @@
     <!-- Responsive Web Design -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
+    <!-- Favicon -->
+    <link rel="icon" href="../../assets/favicons/solitaire/favicon.ico">
+    <link rel="apple-touch-icon" href="../../assets/favicons/solitaire/favicon-180.png">
+    <link rel="icon" href="../../assets/favicons/solitaire/favicon-192.png" sizes="192x192">
 </head>
 
 <body>
