--- a/apps/simple-and-classic-games/index.html
+++ b/apps/simple-and-classic-games/index.html
@@ -3,6 +3,19 @@
 
 <head>
     <title>Simple & Classic Games</title>
+    <meta name="description" content="Your favorite games, exactly how they should be."/>
+    
+    <!-- Open Graph -->
+    <meta property="og:title" content="Simple & Classic Games">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://crawbuck.com/apps/simple-and-classic-games/">
+    <meta property="og:image" content="https://crawbuck.com/assets/cards/card.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="800">
+    <meta property="og:image:alt" content="Simple & Classic Games Promotional Image">
+    <meta property="og:description" content="Your favorite games, exactly how they should be.">
+
     <!-- Stylesheets -->
     <link href="../../assets/css/style.css" rel="stylesheet" type="text/css" media="all">
     <link href="../../assets/css/app-pages.css" rel="stylesheet" type="text/css" media="all">
