Add Featured On sections

--- a/apps/simple-and-classic-games/index.html
+++ b/apps/simple-and-classic-games/index.html
@@ -469,6 +469,37 @@
         </div>
     </div>
 
+    <!-- FEATURED ON -->
+    <div class="sectionText">
+        Featured On
+    </div>
+    <div class="featureRow">
+        <div class="column">
+            <a href="https://www.iphone-ticker.de/geheimtipp-die-kartenspiel-apps-von-duncan-crawbuck-167062/">
+                <div class="information">
+                    <div class="featureText">
+                        iphone-ticker.de
+                    </div>
+                    <div class="caption">
+                        Insider Tip: Duncan Crawbuck's Card Game Apps
+                    </div>
+                </div>
+            </a>
+        </div>
+        <div class="column">
+            <a href="https://gameskeys.net/mobile-board-games/">
+                <div class="information">
+                    <div class="featureText">
+                            GamesKeys.net
+                    </div>
+                    <div class="caption">
+                        Hand-picked Mobile Board Games
+                    </div>
+                </div>
+            </a>
+        </div>
+    </div>
+
     <!-- APP STORE BADGE -->
     <div class="row">
         <div class="centerDrawer">
