--- a/index.html
+++ b/index.html
@@ -134,6 +134,29 @@
             </div>
         </div>
     </div>
+
+    <!-- FEATURED ON -->
+    <div class="row">
+        <div class="mainColumn">
+            <div class="information">
+                <h2>
+                    Featured On
+                </h2>
+                <div class="detailText">
+                    <dl>
+                        <a href="https://www.iphone-ticker.de/geheimtipp-die-kartenspiel-apps-von-duncan-crawbuck-167062/">
+                            <dt><b>iphone-ticker.de</b></dt>
+                            <dd>Insider tip: Duncan Crawbuck's card game apps</dd>
+                        </a>
+
+                        <a href="https://gameskeys.net/mobile-board-games/">
+                            <dt><b>GamesKeys</b></dt>
+                            <dd>Hand-picked Mobile Board Games</dd>
+                        </a>
+                    </dl>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
