Add Twitter card info

--- a/apps/simple-and-classic-games/index.html
+++ b/apps/simple-and-classic-games/index.html
@@ -16,6 +16,10 @@
     <meta property="og:image:alt" content="Simple & Classic Games Promotional Image">
     <meta property="og:description" content="Your favorite games, exactly how they should be.">
 
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@dcrawbuck" />
+
     <!-- Stylesheets -->
     <link href="../../assets/css/style.css" rel="stylesheet" type="text/css" media="all">
     <link href="../../assets/css/app-pages.css" rel="stylesheet" type="text/css" media="all">
