--- a/apps/simple-and-classic-games/index.html
+++ b/apps/simple-and-classic-games/index.html
@@ -13,6 +13,7 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="800">
+    <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Simple & Classic Games Promotional Image">
     <meta property="og:description" content="Your favorite games, exactly how they should be.">
 
